[package]
name = "apidesign"
version = "0.1.0"
authors = ["Fido <fg0217@att.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
structopt = "0.1.3"
structopt-derive = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"