[package]
name = "apish"
version = "0.5.0"
authors = ["Fido <fidencio.garrido@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
structopt = "0.1"
structopt-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "4.0.15"